--- a/09-Video-Trailer-Popup/index.html
+++ b/09-Video-Trailer-Popup/index.html
@@ -21,9 +21,9 @@
         <button class="btn">Watch now</button>
     </div>
 
-    <div class="video-container">
+    <div class="video-container active">
         <video src="./trailer.mp4" controls></video>
-        <i class="fa-sharp fa-solid fa-circle-xmark fa-2x"></i>
+        <i class="fa-sharp fa-solid fa-circle-xmark fa-2x close-icon"></i>
     </div>
     <script src="./app.js"></script>
 </body>
