--- a/14-Image-Slider/index.html
+++ b/14-Image-Slider/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="slider-container">
+        <div class="image-container">
+            <img src="https://picsum.photos/id/237/500/300" alt="image">
+            <img src="https://picsum.photos/id/337/500/300" alt="image">
+            <img src="https://picsum.photos/id/437/500/300" alt="image">
+            <img src="https://picsum.photos/id/537/500/300" alt="image">
+            <img src="https://picsum.photos/id/637/500/300" alt="image">
+        </div>
+        <i class="fa-solid fa-angles-left btn prev"></i>
+        <i class="fa-solid fa-angles-right btn next"></i>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
